:bug: fix megamenu layout issue

--- a/plugins/system/helixultimate/assets/css/admin/megamenu.css
+++ b/plugins/system/helixultimate/assets/css/admin/megamenu.css
@@ -271,6 +271,7 @@
 
 .hu-megamenu-columns-layout .hu-megamenu-custom-layout {
 	margin-top: 10px;
+	text-align: left;
 	display: none;
 }
 
